langtools/test/tools/javac/typeAnnotations/failures/common/arrays/MissingAnnotationValue.out
MissingAnnotationValue.java:10:12: compiler.err.annotation.missing.default.value: A, field
1 error
